Implementing Sonar suggestions